--- a/build-aux/makefile-subst.am
+++ b/build-aux/makefile-subst.am
@@ -79,6 +79,9 @@ do_subst = $(SED) \
 	-e 's,[@]PACKAGE_BUGREPORT[@],$(PACKAGE_BUGREPORT),g' \
 	-e 's,[@]GIT_VERSION_SCRIPT[@],$(GIT_VERSION_SCRIPT),g' \
 	-e 's,[@]GIT_PACKAGE_VERSION[@],$(GIT_PACKAGE_VERSION),g' \
+	-e 's,[@]GIT_PACKAGE_MAJOR[@],$(GIT_PACKAGE_MAJOR),g' \
+	-e 's,[@]GIT_PACKAGE_MINOR[@],$(GIT_PACKAGE_MINOR),g' \
+	-e 's,[@]GIT_PACKAGE_PATCH[@],$(GIT_PACKAGE_PATCH),g' \
 	-e 's,[@]GIT_PACKAGE_VERSION_BUILD[@],$(GIT_PACKAGE_VERSION_BUILD),g' \
 	-e 's,[@]GIT_PACKAGE_VERSION_NUMBER[@],$(GIT_PACKAGE_VERSION_NUMBER),g' \
 	-e 's,[@]GIT_PACKAGE_BUILD[@],$(GIT_PACKAGE_BUILD),g' \
