--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 #
 #   Bindle Binaries Tools
-#   Copyright (C) 2012, 2021 Bindle Binaries <syzdek@bindlebinaries.com>.
+#   Copyright (C) 2012, 2021, 2022 Bindle Binaries <syzdek@bindlebinaries.com>.
 #
 #   @BINDLE_BINARIES_BSD_LICENSE_START@
 #
@@ -36,15 +36,15 @@
 
 AC_PREREQ([2.65])
 
-AC_COPYRIGHT([Copyright (c) 2012, 2016, 2021 Bindle Binaries <syzdek@bindlebinaries.com>.])
+AC_COPYRIGHT([Copyright (c) 2012, 2016, 2021, 2022 David M. Syzdek <david@syzdek.net>.])
 AC_REVISION(0.5)
-AC_INIT([Bindle Binaries Tools],[0.5],[syzdek@bindlebinaries.com],[bindletools])
+AC_INIT([Bindle Binaries Tools],[0.5],[david@syzdek.net],[bindletools])
 
 AC_SUBST([RELEASE_MONTH],["August 2021"])
 
 # directory locations
 AC_CONFIG_AUX_DIR([build-aux])
-AC_CONFIG_SRCDIR([build-aux/makefile-bindle.am])
+AC_CONFIG_SRCDIR([build-aux/git-tar-name.txt])
 #AC_CONFIG_LIBOBJ_DIR(compat)
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -55,7 +55,7 @@ AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
 # configures for automake
-AM_INIT_AUTOMAKE(gnu std-options subdir-objects)
+AM_INIT_AUTOMAKE(gnu std-options subdir-objects foreign)
 
 # Compilers
 AC_PROG_CC
@@ -63,8 +63,11 @@ AC_PROG_CC
 AC_PROG_CXX
 AM_PROG_CC_C_O
 AC_PROG_INSTALL
+AC_PROG_MAKE_SET
 AC_USE_SYSTEM_EXTENSIONS # replaces AC_AIX AC_GNU_SOURCE AC_MINIX
 AC_C_BIGENDIAN
+AC_C_INLINE
+AC_C_RESTRICT
 
 # Version Info:
 #    Current    -- the current version number of this API
@@ -77,7 +80,6 @@ AC_C_BIGENDIAN
 AC_BINDLE_LIBTOOL_VERSION_INFO(0, 0, 0)
 
 # binary locations
-AC_PROG_INSTALL
 AC_PATH_PROG([SHELL],   sh bash,        [AC_MSG_ERROR([missing "sh"])], [$PATH])
 AC_CHECK_TOOLS(AR,      ar gar,         [AC_MSG_ERROR([missing binutil "ar"])])
 AC_CHECK_TOOLS(LD,      ld gld,         [AC_MSG_ERROR([missing binutil "ld"])])
@@ -87,57 +89,84 @@ AC_CHECK_TOOLS(STRIP,   strip gstrip,   [AC_MSG_ERROR([missing binutil "strip"])
 
 # shell programs
 AC_PROG_AWK
-AC_PROG_CPP
 AC_PROG_EGREP
 AC_PROG_FGREP
-AM_PROG_LEX
+#AM_PROG_LEX
 AC_PROG_LN_S
-
-# GNU Libtool Support
-LT_INIT(dlopen disable-fast-install win32-dll)
+AC_PROG_CPP
 
 # check for common functions
 AC_FUNC_FORK
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_FUNC_STRERROR_R
+AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
 
 # Type checks
 AC_TYPE_INT8_T
 AC_TYPE_INT16_T
 AC_TYPE_INT32_T
 AC_TYPE_INT64_T
+AC_TYPE_MODE_T
+AC_TYPE_OFF_T
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
+AC_TYPE_UID_T
 AC_TYPE_UINT8_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
 AC_TYPE_UINT64_T
 
 # check for required functions
-AC_CHECK_FUNCS([bzero],          [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([clock_gettime],  [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([getcwd],         [], [AC_MSG_ERROR([missing required functions])])
 AC_CHECK_FUNCS([memset],         [], [AC_MSG_ERROR([missing required functions])])
-AC_CHECK_FUNCS([regcomp],        [], [AC_MSG_ERROR([missing required functions])])
-AC_CHECK_FUNCS([strdup],         [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([random],         [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([srandom],        [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strcasecmp],     [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strchr],         [], [AC_MSG_ERROR([missing required functions])])
 AC_CHECK_FUNCS([strerror],       [], [AC_MSG_ERROR([missing required functions])])
 AC_CHECK_FUNCS([strncasecmp],    [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strrchr],        [], [AC_MSG_ERROR([missing required functions])])
 AC_CHECK_FUNCS([strtol],         [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strtoul],        [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strtoull],       [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strtoumax],      [], [AC_MSG_ERROR([missing required functions])])
 
 # enables getopt_long if header and functions were found
+AC_CHECK_HEADERS([assert.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([ctype.h],       [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([errno.h],       [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([fcntl.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([features.h],    [], [])
 AC_CHECK_HEADERS([getopt.h],     [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([inttypes.h],   [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([limits.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([stdarg.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([stdatomic.h],   [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([stddef.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([stdio.h],       [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([stdlib.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([string.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([strings.h],     [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([unistd.h],     [], [AC_MSG_ERROR([missing required headers])])
 
+# check for data types
+AC_CHECK_TYPES([atomic_intmax_t],   [], [AC_MSG_ERROR([missing required data type])], [#include <stdatomic.h>])
+AC_CHECK_TYPES([atomic_uintmax_t],  [], [AC_MSG_ERROR([missing required data type])], [#include <stdatomic.h>])
+
+# GNU Libtool Support
+LT_INIT(dlopen disable-fast-install)
+
 # initiates bindle tools macros
-AC_BINDLE(contrib/bindletools)
+AC_BINDLE(.)
 
 # determine PACKAGE_VERSION via Git
 AC_BINDLE_GIT_PACKAGE_VERSION([build-aux/git-package-version.sh])
 
 # custom configure options
-AC_BINDLE_ENABLE_WARNINGS([-Wno-padded -Wno-cast-qual], [])
-AC_BINDLETOOLS_LIBRARY
+AC_BINDLE_ENABLE_WARNINGS([-Wno-unknown-pragmas -Wno-missing-format-attribute -Wno-poison-system-directories], [], [c11])
+AC_BINDLETOOLS_LIBBINDLE
 
 # Creates outputs
 AC_CONFIG_FILES([Makefile])
@@ -145,7 +174,13 @@ AC_OUTPUT
 
 # Show local config
 AC_MSG_NOTICE([ ])
-AC_MSG_NOTICE([   Bindle Binaries Tools ($PACKAGE_VERSION)])
+AC_MSG_NOTICE([   Bindle Binaries Tools $GIT_PACKAGE_VERSION ($GIT_PACKAGE_BUILD)])
+AC_MSG_NOTICE([ ])
+AC_MSG_NOTICE([   Features:])
+AC_MSG_NOTICE([      Debug Output               ${USE_DEBUG}])
+AC_MSG_NOTICE([ ])
+AC_MSG_NOTICE([   Options:])
+AC_MSG_NOTICE([      Install libbindle.la       ${ENABLE_LIBBINDLE}])
 AC_MSG_NOTICE([ ])
 AC_MSG_NOTICE([   Please send suggestions to:   $PACKAGE_BUGREPORT])
 AC_MSG_NOTICE([ ])
